# chess-polyglot-reader

./: Cargo.toml
src/: lib.rs
tests/: test_keys.rs  test_reader.rs
