[package]
name = "chess-polyglot-reader"
version = "0.1.0"
authors = ["KSean222 <44050761+KSean222@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { version = "3.1.1", optional = true }

[features]
chess_lib_helpers = ["chess"]
